--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- fr et pas en -->
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,6 +14,7 @@
     <title>myCity</title>
   </head>
   <body>
+    <!-- tu peux virer le header vide -->
     <header></header>
     <main class="row mt-5">
       <p class="col-12 ms-2 col-md-5">
@@ -22,6 +24,7 @@
       <form class="col-12 offset-md-1 col-md-5">
         <fieldset class="row mx-2">
           <label class="col-5" for="datalist_codePostal">Code-Postal</label>
+          <!-- il n'y a pas d'attribut label sur la balise input -->
           <input
             class="col-4 col-md-6"
             name="CodePostal"
