--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           <label class="col-4 col-md-6" for="input_ville">Ville&nbsp;:</label>
           <input
             class="col-6 col-md-6"
-            type="text"
+            name="Ville"
+            label="Ville"
             placeholder="Clermont-Ferrand"
-            name="ville"
+            type="text"
             id="input_ville"
           />
           <button
