--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             >Code-Postal&nbsp;:</label
           >
           <input
+            maxlength="5"
             class="col-6 col-md-6"
             name="CodePostal"
             label="Code-Postal"
@@ -54,6 +55,7 @@
           </button>
         </fieldset>
       </form>
+      <script src="script.js"></script>
       <!-- BootSrap -->
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
