--- a/index.html
+++ b/index.html
@@ -24,29 +24,24 @@
             >Code-Postal&nbsp;:</label
           >
           <input
-            maxlength="5"
             class="col-6 col-md-6"
             name="CodePostal"
-            label="Code-Postal"
             placeholder="63000"
-            type="number"
+            type="text"
             id="input_codePostal"
             list="datalist_codePostal"
           />
-          <datalist id="datalist_codePostal">
-            <option id="opt1" value="63000" />
-            <option id="opt2" value="63360" />
-            <option id="opt3" value="63666" />
-          </datalist>
+          <datalist id="datalist_codePostal"> </datalist>
           <label class="col-4 col-md-6" for="input_ville">Ville&nbsp;:</label>
           <input
             class="col-6 col-md-6"
             name="Ville"
-            label="Ville"
             placeholder="Clermont-Ferrand"
             type="text"
             id="input_ville"
+            list="datalist_ville"
           />
+          <datalist id="datalist_ville"> </datalist>
           <button
             class="mt-1 col-6 offset-4 col-md-12 offset-md-0"
             type="button"
