--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             >Code-Postal&nbsp;:</label
           >
           <input
+            pattern="[0-9]{5}|[0-9]{2}"
             class="col-6 col-md-6"
             name="CodePostal"
             placeholder="63000"
@@ -31,7 +32,9 @@
             id="input_codePostal"
             list="datalist_codePostal"
           />
-          <datalist id="datalist_codePostal"> </datalist>
+          <datalist title="codesPostaux" id="datalist_codePostal">
+            <option value="Test">Test</option>
+          </datalist>
           <label class="col-4 col-md-6" for="input_ville">Ville&nbsp;:</label>
           <input
             class="col-6 col-md-6"
@@ -45,6 +48,7 @@
           <button
             class="mt-1 col-6 offset-4 col-md-12 offset-md-0"
             type="button"
+            id="accesInfos"
           >
             Accéder aux informations
           </button>
