--- a/index.html
+++ b/index.html
@@ -20,24 +20,33 @@
       </p>
       <form class="col-12 offset-md-1 col-md-5">
         <fieldset class="row mx-2">
-          <label class="col-4 col-md-6" for="input_codePostal"
+          <label
+            id="label_codePostal"
+            class="col-4 col-md-6"
+            for="input_codePostal"
             >Code-Postal&nbsp;:</label
           >
           <input
             pattern="[0-9]{5}|[0-9]{2}"
-            class="col-6 col-md-6"
+            class="col-5 offset-1 col-md-6 offset-md-0"
             name="CodePostal"
             placeholder="63000"
             type="text"
             id="input_codePostal"
             list="datalist_codePostal"
           />
-          <datalist title="codesPostaux" id="datalist_codePostal">
-            <option value="Test">Test</option>
-          </datalist>
-          <label class="col-4 col-md-6" for="input_ville">Ville&nbsp;:</label>
+          <datalist title="codesPostaux" id="datalist_codePostal"> </datalist>
+          <label id="label_ville" class="col-3 col-md-3" for="input_ville"
+            >Ville&nbsp;:</label
+          >
+          <select
+            class="col-2 col-md-3"
+            title="select_codePostal"
+            style="visibility: hidden"
+            id="select_codePostal"
+          ></select>
           <input
-            class="col-6 col-md-6"
+            class="col-5 col-md-6"
             name="Ville"
             placeholder="Clermont-Ferrand"
             type="text"
@@ -46,7 +55,7 @@
           />
           <datalist id="datalist_ville"> </datalist>
           <button
-            class="mt-1 col-6 offset-4 col-md-12 offset-md-0"
+            class="mt-1 col-5 offset-5 col-md-12 offset-md-0"
             type="button"
             id="accesInfos"
           >
